--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,13 @@ body {
 }
 
 @media (max-width: 991px) {
-    .p-sm-0 {
-        padding: 0;
-    }
+  .p-sm-0 {
+    padding: 0;
+  }
+}
+
+@media (max-width: 792px) {
+  .mobile-table {
+    display: none;
+  }
 }
